# suffix-classifier

./: .travis.yml  CMakeLists.txt  README.md
corpus/: names.txt  test.txt
images/: decision.dot  words.dot
source/: Database.cc  Database.hh  Decision.cc  Decision.hh  Node.cc  Node.hh  evaluate.cc  gencode.cc  generated.c  gentree.cc
